fix style scrollbar

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -89,3 +89,15 @@
     display: block;
     cursor: pointer;
 }
+
+.input-search__list::-webkit-scrollbar {
+    width: 10px;
+}
+
+.input-search__list::-webkit-scrollbar-track {
+    background: #ccc;
+}
+
+.input-search__list::-webkit-scrollbar-thumb {
+    background: orange;
+}
